--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "server": "nodemon ./bin/server",
     "build": "./node_modules/.bin/webpack --config ./webpack.config.js --env development",
     "build:server": "./node_modules/.bin/webpack-dev-server --config ./webpack.config.js --env development",
-    "start": "node --require ts-node/register index.ts"
+    "start": "DEBUG=express:* & nodemon --require ts-node/register index.ts"
   },
   "author": "",
   "license": "ISC",
@@ -38,6 +38,7 @@
     "clean-webpack-plugin": "^0.1.19",
     "copy-webpack-plugin": "^4.5.1",
     "css-loader": "^0.28.11",
+    "express-swagger-generator": "^1.1.0",
     "extract-text-webpack-plugin": "^3.0.2",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^22.4.3",
